Génération des classes vues et contrôleurs

--- a/DS_ArthurGOAREGUER/appsettings.json
+++ b/DS_ArthurGOAREGUER/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MVC_DS_ArthurGOAREGUERContext": "Server=(localdb)\\mssqllocaldb;Database=Tournois;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
